fix: corregir datalist de nombre en formulario de facturas al seleccionar categoría
El campo insumosPorTipo se agrupaba por getTipo() (display name: "Malta")
pero el select de categoría envía el nombre del enum ("MALTA"), causando que
INSUMOS_POR_TIPO["MALTA"] retornara undefined y el datalist quedara vacío.

Ahora se itera TipoInsumo/TipoEquipo.values() y se filtra por display name,
usando tipo.name() como clave. Todas las categorías aparecen aunque estén vacías.

También incluye fix de V45__tipo_libre.sql (DROP CONSTRAINT antes de los UPDATEs)
y actualización de CLAUDE.md con ClienteServiceTest.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>